# jeppe.science

./: .gitattributes  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  GUIDE.md  README.md  TODO.md  docker-compose.yml  down  go.mod  go.sum  netlify.toml  package-lock.json  package.json  pyproject.toml  run_docker  tasks.py  up
archetypes/book_notes/: index.md
archetypes/thoughts/: index.md
assets/js/: gallery.js  mathjax-config.js
assets/media/: icon.xcf
assets/scss/: checkbox.scss  colors.scss  custom.scss  emoji_font.scss  figcaption.scss  gallery.scss  jupyter.scss  table.scss
assets/scss/wowchemy/: checkbox.scss  masonry_reviewable.scss  portfolio_click_border.scss
comments_override/: original_remark.css
comments_override/web/: remark.css
config/: nbconvert_config.py
config/_default/: config.yaml  menus.yaml  params.yaml
config/production/: params.yaml
content/: privacy.md  terms.md
content/admin/: index.md
content/authors/admin/: _index.md
content/authors/jeppe/: _index.md
content/authors/jeppe_career/: _index.md
content/book_notes/: _index.md
content/book_notes/1984 - George Orwell/: index.md
content/book_notes/Claudia Hammond - The Art of Rest/: index.md
content/book_notes/Douglas Adams - Dirk Gentley's Holistic Detective Agency/: index.md
content/book_notes/Douglas Adams - The Long Dark Tea-Time of the Soul/: index.md
content/book_notes/Douglas Adams - The Salmon of Doubt/: index.md
content/book_notes/George Orwell - Some Thoughts on the Common Toad/: index.md
content/book_notes/Kurt Vonnegut - Slaughterhouse 5/: index.md
content/book_reviews/: _index.md
content/book_reviews/1984 - George Orwell/: index.md
content/books/: books.md  index.md  introduction.md
content/career/: bottom.md  experience.md  hello.md  index.md  references.md  skills.md
content/contact/: contact.md  index.md  intro.md
content/cv/: index.md
content/gallery/: album.md  index.md
content/home/: about.md  bottom.md  experience.md  hello.md  posts.md  projects.md  tags.md
content/thoughts/: _index.md
content/thoughts/Barista/: index.md
content/thoughts/Fitting Experimental Data in Python/: index.md
content/thoughts/I Now Respect Your Privacy/: index.md
content/thoughts/My Great Big Software Wishlist/: index.md
content/thoughts/Privacy for Non-Fanatics/: index.md
content/thoughts/Quantifying The Curve/: index.md
content/thoughts/Why I Fled Mailbox and Mailfence for Protonmail/: index.md
content/thoughts/barista/: index.md
content/thoughts/fitting-experimental-data-in-python/: E5data.xlsx  content.ipynb  contents.ipynb  contents.md  index.md
content/thoughts/getting-started/: index.md
content/thoughts/i-now-respect-your-privacy/: index.md
cv/: README.md
data/: page_sharer.toml
envs/: remark42.env
layouts/_default/: single.html  sitemap.xml
layouts/partials/: custom_head.html  page_header.html
layouts/shortcodes/: book_note.html  email.html  include.html  link.html  noshow.html  notebook.html  page.html  pdf.html  place_resource.html  thought.html
remark42/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  remark42.dev.env  remark42.env  remark42.prod_template.env  remark42_overrides.env
remark42/comments_override/: original_remark.css
scripts/: netlify_install.sh
static/profile/: cv.tex  devicons.sty  documents  fortysecondscv.cls  references
umami/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  umami.dev.env  umami.prod_template.env
(+14 files in other folders)
