[tool.poetry]
name = "jeppe.science"
version = "0.1.0"
description = ""
authors = ["Jeppe Klitgaard <hi@jeppe.science>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.13.0"
poethepoet = "^0.13.1"
watchfiles = "^0.18.0"
nbconvert = "^7.2.3"
matplotlib = "^3.6.1"

[tool.poetry.dev-dependencies]
mypy = "^0.982"

[tool.poe.tasks]
serve = {cmd = "hugo server --disableFastRender", help = "Run Hugo server"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
