[project]
name = "jeppe-science"
version = "0.1.0"
description = "Personal website and blog"
readme = "README.md"
authors = [{ name = "Jeppe Klitgaard", email = "hi@jeppe.science" }]
requires-python = ">=3.13"
dependencies = []


[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
    "watchfiles>=1.0.3",
]

render = ["ipykernel>=6.29.5", "nbconvert>=7.16.4"]

# Env-* are used by notebooks
env-base = ["numpy>=2.2.1", "pandas>=2.2.3", "scipy>=1.14.1"]

env-graphics = ["matplotlib>=3.10.0", "seaborn>=0.13.2"]
env-data = ["openpyxl>=3.1.5"]

env-numerical = [
    "lmfit>=1.3.2",
    "numdifftools>=0.9.41",
    "sympy>=1.13.3",
    "uncertainties>=3.2.2",
]

[tool.uv]
default-groups = [
    "dev",
    "render",
    "env-base",
    "env-graphics",
    "env-data",
    "env-numerical",
]

[tool.poe.tasks]
# Dev tasks
serve = { cmd = "hugo server --disableFastRender", help = "Run Hugo server" }
nbconvert_watch = { cmd = 'watchfiles --ignore-paths var "jupyter nbconvert --config config/nbconvert_config.py" ./**/*.ipynb', help = "Run nbconvert sync" }
up = { cmd = "./run_docker dev up", help = "Start Remark42 and Umami servers" }
down = { cmd = "./run_docker dev down", help = "Stop Remark42 and Umami servers" }

# Production tasks
build = { cmd = "hugo --gc", help = "Run Hugo server" }
nbconvert_build = { cmd = 'jupyter nbconvert --config config/nbconvert_config.py ./**/*.ipynb', help = "Run nbconvert sync" }
prepare = ["nbconvert_build"]
